Fix history button spacing

--- a/resources/style/react/ui/history.scss
+++ b/resources/style/react/ui/history.scss
@@ -6,4 +6,5 @@
   z-index: 150;
   grid-row: 1;
   grid-column: 3;
+  gap: 0.5rem;
 }
